  and defining explicitly composition.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11364: Allow `make -C testsuite promote` to take `TEST` and `LIST` variables
  (Antal Spector-Zabusky, review by Gabriel Scherer and David Allsopp)

- #11446: document switch compilation (lambda/switch.ml)
  (Gabriel Scherer, review by Luc Maranget and Vincent Laviron)

- #11601, #11612: Clean up some global state handling in emitcode, spill.
  (Hugo Heuzard, Stefan Muenzel review by Vincent Laviron and Gabriel Scherer)

- #11627: use return values instead of globals for linear scan intervals
  (Stefan Muenzel, review by Nicolás Ojeda Bär)

- #11634: Dll.open_dll now properly handle opening for execution while already
  opened for checking
  (Hugo Heuzard, review by Nicolás Ojeda Bär)

- #11569: Remove hash type encoding
  (Hyunggyu Jang, review by Gabriel Scherer and Florian Angeletti)

- #11568: Encode inline record types in Path.t
  (Leo White and Hyunggyu Jang, review by Gabriel Scherer)

- #11745: Debugger and toplevels: embed printer types rather than
  reading their representations from topdirs.cmi at runtime.
  (Sébastien Hinderer, review by Florian Angeletti, Nicolás Ojeda Bär and
  Gabriel Scherer)

### Build system:
- #11590: Allow installing to a destination path containing spaces.
   (Élie Brami, review by Sébastien Hinderer and David Allsopp)

### Bug fixes:

- #10664, #11600: Unsoundness in the typing of polymorphic methods
  involving polymorphic variants
  (Jacques Garrigue, report by Mike Shulman, review by Gabriel Scherer)

- #11302, #11412: `ocamlc` and `ocamlopt` should not remove generated files
  when they are not regular files.
  (Xavier Leroy, report by Thierry Martinez, review by
   Anil Madhavapeddy, Nicolás Ojeda Bär, David Allsopp)

- #10348, #10560, #11561: Expand GADT equations lazily during unification to
  avoid ambiguity
  (Jacques Garrigue, review by Leo White)

- #11436: Fix wrong stack backtrace for out-of-bound exceptions raised