@@ -29,4 +29,3 @@ type error =
 exception Error of error
 
 val report_error: Format.formatter -> error -> unit
-val reset: unit -> unit
